--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "liveServer.settings.CustomBrowser": "chrome",
   // "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome --incognito --remote-debugging-port=9222",
   "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome",
-  "liveServer.settings.NoBrowser": false,
+  "liveServer.settings.NoBrowser": true,
   "liveServer.settings.ignoreFiles": [
     ".vscode/**",
     "**/*.scss",
